--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,20 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainActivity">
+    app:startDestination="@id/mainFragment">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.android.threekingdomschess.MainActivity"
-        android:label="MainActivity">
-        <action
-            android:id="@+id/action_mainActivity_to_infoFragment"
-            app:destination="@id/infoFragment" />
-    </activity>
     <fragment
         android:id="@+id/infoFragment"
         android:name="com.example.android.threekingdomschess.InfoFragment"
         android:label="InfoFragment"
         tools:layout="@layout/fragment_info"/>
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.android.threekingdomschess.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_infoFragment"
+            app:destination="@id/infoFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_enter_anim"
+            app:popEnterAnim="@anim/nav_default_exit_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
 
 </navigation>
