--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,10 +18,7 @@
         <action
             android:id="@+id/action_mainFragment_to_infoFragment"
             app:destination="@id/infoFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_enter_anim"
-            app:popEnterAnim="@anim/nav_default_exit_anim"
-            app:popExitAnim="@anim/nav_default_exit_anim" />
+            app:enterAnim="@android:anim/fade_in" />
     </fragment>
 
 </navigation>
