--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/infoFragment"
-        android:name="com.example.android.threekingdomschess.InfoFragment"
+        android:name="com.example.android.threekingdomschess.info.InfoFragment"
         android:label="InfoFragment"
         tools:layout="@layout/fragment_info"/>
     <fragment
