--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,29 +8,34 @@
         android:layout_height="match_parent"
         >
 
-        <com.example.android.threekingdomschess.BoardView
-            android:id="@+id/board_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-32dp"
-            android:layout_marginBottom="56dp"
-            android:foregroundGravity="center_vertical"
-            app:layout_constraintBottom_toTopOf="parent"
+        <ImageView
+            android:id="@+id/zhou"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3"
+            android:contentDescription="@string/player_indicator"
+            app:srcCompat="@drawable/zhou"
+            app:tint="#4D9561" />
 
         <Button
             android:id="@+id/restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="142dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center_vertical"
             android:text="@string/restart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/board_view" />
+            app:layout_constraintTop_toBottomOf="@+id/board_view"
+            app:layout_constraintHorizontal_bias="0.4"
+
+            />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/toggle"
@@ -48,7 +53,22 @@
             android:layout_marginStart="32dp"
             android:text="@string/introduction"
             app:layout_constraintBaseline_toBaselineOf="@+id/toggle"
-            app:layout_constraintStart_toEndOf="@+id/toggle" />
+            app:layout_constraintStart_toEndOf="@+id/toggle"
+
+            />
+
+        <com.example.android.threekingdomschess.BoardView
+            android:id="@+id/board_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginBottom="16dp"
+            android:foregroundGravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/zhou"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
