--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -95,7 +95,7 @@
 
             />
 
-        <androidx.appcompat.widget.SwitchCompat
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
