apply animation for playerIndicator

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,54 +30,54 @@
 
         <ImageView
             android:id="@+id/zhou1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/player_indicator"
+            android:alpha="1.0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintVertical_bias="0.5"
             app:srcCompat="@drawable/zhou1"
-            app:tint="#4D9561"
-            android:alpha="0.55"
-            android:visibility="visible"
-            />
+            app:tint="#4D9561" />
 
         <ImageView
             android:id="@+id/zhou2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/player_indicator"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@drawable/zhou2"
+            app:layout_constraintVertical_bias="0.5"
+            app:srcCompat="@drawable/zhou1"
             app:tint="#191919"
-            android:alpha="0.55"
-            android:visibility="invisible"
+            android:alpha="0.0"
             />
 
         <ImageView
             android:id="@+id/zhou3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/player_indicator"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@drawable/zhou3"
-            app:tint="#c82f21"
-            android:alpha="0.55"
-            android:visibility="invisible"
-            />
+            app:layout_constraintVertical_bias="0.5"
+            app:srcCompat="@drawable/zhou1"
+            android:alpha="0.0"
+            app:tint="#c82f21" />
 
 
         <Button
@@ -125,6 +125,7 @@
             android:foregroundGravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/zhou1"
+            app:layout_constraintHorizontal_bias="0.51"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
