create splash screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#954040</color>
     <color name="orange">#FF8A55</color>
+    <color name="blue">#66B9F9</color>
+
 </resources>
